[package]
name = "blaze"
version = "0.1.0"
authors = ["EasySouls <tarjanyicsanad@gmail.com>"]
license = "MIT"
description = "A simple CLI tool to search content in files"
readme = "README.md"
homepage = "https://github.com/EasySouls/blaze"
repository = "https://github.com/EasySouls/blaze"
keywords = ["cli", "search", "grep", "find", "content", "file"]
categories = ["command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
anyhow = "1.0.79"

[dev-dependencies]
assert_cmd = "2.0.13"
predicates = "3.1.0"
assert_fs = "1.1.1"
